# FedLearn

./: README.md
flwr_baremetal/: generate_dataset.py  instructions.txt  pyproject.toml
flwr_baremetal/laptop_and_raspberry_script/: start_monitor.sh  stop_monitor.sh
flwr_baremetal/server_script/: note.txt  start_net.sh  stop_net.sh
flwr_baremetal/test/: client_app.py  server_app.py  task.py
flwr_baremetal/ubuntu_touch_script/: start_monitor.sh  start_simpleperf.sh  stop_monitor.sh  stop_simpleperf.sh
flwr_docker/: .gitignore  compose.yml  compose_statefull.yml  compose_with_privileges.sh
flwr_docker/client_2/: start_monitor.sh
flwr_docker/server/: start_net.sh  stop_monitor.sh  stop_net.sh
flwr_docker/test/: generate_dataset.py  pyproject.toml
flwr_docker/test/test/: __init__.py  client_app.py  server_app.py  task.py
flwr_docker/test/test_onnx/client_side/: greeter_server.py  real_client.py  task.py  test.proto  test_pb2_grpc.py
flwr_docker/test/test_onnx/server_side/: client_app.py  server_app.py  task_onnx.py  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py
